# airflow2to3

./: LICENSE.txt  README.md  pyproject.toml
src/airflow2to3/: __main__.py  fix.py
src/airflow2to3/rules/: AIR301.py
tests/: test_fix.py
tests/fixtures/AIR301/: updated.py
