[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airflow2to3"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Tzu-ping Chung", email = "uranusjr@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "libcst>=1.4.0",
]

[project.urls]
Documentation = "https://github.com/uranusjr/airflow2to3#readme"
Issues = "https://github.com/uranusjr/airflow2to3/issues"
Source = "https://github.com/uranusjr/airflow2to3"

[tool.hatch.version]
path = "src/airflow2to3/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/airflow2to3 tests}"

[tool.coverage.run]
source_pkgs = ["airflow2to3", "tests"]
branch = true
parallel = true
omit = [
  "src/airflow2to3/__about__.py",
]

[tool.coverage.paths]
airflow2to3 = ["src/airflow2to3", "*/airflow2to3/src/airflow2to3"]
tests = ["tests", "*/airflow2to3/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
